--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    coroutines_version = "0.30.2"
+    arch_version = "1.1.1"
+    retrofit_version = "2.4.0"
+    support_library_version = "28.0.0"
+}
