--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField("String", "BASE_URL", "\"https://rss.itunes.apple.com/api/v1/us/\"")
-            buildConfigField("String", "DETAILS_URL", "\"https://rss.itunes.apple.com/api/v1/us/\"")
+            buildConfigField("String", "DETAILS_URL", "\"https://itunes.apple.com/\"")
         }
     }
 }
